tests/ui/cve_2020_35888_simplified/cve_2020_35888_simplified.stderr
error: Possibly dropping an uninitialized value
  --> tests/ui/cve_2020_35888_simplified/cve_2020_35888_simplified.rs:18:9
   |
LL |         (*ptr) = DropDetector(12345);
   |         ^^^^^^

error: aborting due to 1 previous error

